--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,23 @@
     <head>
         <title>Road Detection from Panchromatic Images</title>
 
-        <link rel="icon" href="./assets/media/favicon.png" type="image/x-icon"> 
-        <link rel="shortcut icon" href="./assets/media/favicon.png" type="image/x-icon"> 
+        <link rel="icon" href="static/assets/media/favicon.png" type="image/x-icon"> 
+        <link rel="shortcut icon" href="static/assets/media/favicon.png" type="image/x-icon"> 
 
-        <link rel="stylesheet" href="./assets/css/styles.css">
+        <link rel="stylesheet" href="static/assets/css/styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     </head>
     <body>
         <div class="container">
             <div class="header">
-                <img src="./assets/media/logo.png" alt="Logo" width="100" height="100"/>        
+                <img src="static/assets/media/logo.png" alt="Logo" width="100" height="100"/>        
                 <h1>Road Detection from Satellite Images</h1>
             </div>
             <div class="content">
-                    <img src="./assets/media/banner.gif" alt="Logo" width="30%"/><br>       
-                    <a class="enter-site" href="./road_detector.html"><i class="bi bi-thermometer-sun bi--flip-vertical"></i> &nbsp; Initialise Road Detection System &nbsp; <i class="bi bi-thermometer-snow"></i></a>
-                </div>
-            </div>
+                    <img src="static/assets/media/banner.gif" alt="Logo" width="30%"/><br>       
+                    <a class="enter-site" href="/detector"><i class="bi bi-thermometer-sun bi--flip-vertical"></i>&nbsp; Initialise Road Detection System &nbsp;<i class="bi bi-thermometer-snow"></i></a>
+             </div>
+        </div>
     </body>
 </html>
 
