--- a/templates/road_detector.html
+++ b/templates/road_detector.html
@@ -5,18 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Road Detection from Panchromatic Images</title>
 
-        <link rel="icon" href="static//assets/media/favicon.png" type="image/x-icon">
-        <link rel="shortcut icon" href="static//assets/media/favicon.png" type="image/x-icon"> 
+        <link rel="icon" href="static/assets/media/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="static/assets/media/favicon.png" type="image/x-icon"> 
 
         <link rel="stylesheet" href="static/assets/css/styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-
-        <script src="static/assets/js/script.js"></script>
+        <!-- <script src="static/assets/js/script.js"></script> -->
     </head>
     <body>
         <div class="container">
             <div class="header">
-                <img src="static//assets/media/logo.png" alt="Logo" width="100" height="100"/>        
+                <img src="static/assets/media/logo.png" alt="Logo" width="100" height="100"/>        
                 <h1>Road Detection from Satellite Images</h1>
             </div>
             <div class="content">
@@ -48,16 +47,22 @@
                                 </select>
                             </td>
                         </tr>
-
                         <tr>
                             <td><input class="submit-button" type="submit" value="Detect Roads" /></td>
                         </tr>
-                        <!-- <tr><td><p class="result">Result</p></td></tr> -->
                         <tr>
                             <!-- <td><p class="Input: Remote-Sensing Satellite Image"><img src="input.jpg path" alt="Input: Satellite Image"></p></td> -->
-                            <td><p>Input: Satellite Image<br><img src="{{ img_path }}" alt="Input: Satellite Image"></p></td>
+                            <!-- <th><p>Input: Satellite Image<br><img src="{{ img_path }}" alt="Input: Satellite Image"></p></th> -->
+                            <th><p>Input: Satellite Image<br></p></th>
+
                             <!-- {{message}} is a value passed from detect_roads.py that contains the relative path to output.png -->
-                            <td><p>Output: Roads Detected<br><img src="{{ message }}" alt="Output: Roads Detected"></p></td>
+                            <th><p>Output: Roads Detected</p></th>
+                        </tr>
+                        <tr>
+                            <td><p><img src="{{ input_img_path }}" alt=""></p></td>
+                            <!-- <td><p><img src="..\\test_data\\36.jpg" alt="" width="369" height="369"></p></td> -->
+
+                            <td><p><img src="{{ message }}" alt=""><p></td>
                         </tr>
                     </table>
                 </form>
