--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -99,7 +99,7 @@ body {
   cursor: pointer;
   padding: 3%;
   margin: 4% 0% 4% 10%;
-  width: 210%;
+  width: 180%;
   height: 20%;
   border-radius: 20px;
   background-color: #222233;
@@ -112,7 +112,7 @@ body {
   cursor: pointer;
   padding: 3%;
   margin: 4% 0% 4% 10%;
-  width: 210%;
+  width: 180%;
   height: 20%;
   border-radius: 20px;
   transition: 0.4s ease;
@@ -125,17 +125,11 @@ body {
 #temp,
 #result,
 input[type="text"],
+#img_path,
 #model_type {
   font-size: 18px;
   border-radius: 5px;
   margin: 4%;
-  text-align: left;
-}
-
-input[type="text"] {
-  font-size: 20px;
-  border-radius: 5px;
-  margin: 4% 4% 4% 7%;
   text-align: left;
 }
 
