--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Road Detection from Panchromatic Images</title>
 
         <link rel="icon" href="static/assets/media/favicon.png" type="image/x-icon"> 
