--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   height: 100vh;
   text-align: center;
-  background-color: antiquewhite;
+  background-color: #adcfff;
 }
 
 .header {
@@ -25,6 +25,7 @@ body {
   background-color: #adcfff;
   padding: 5px;
   display: flex;
+  margin-bottom: 10px;
 }
 
 .header h1 {
@@ -34,7 +35,7 @@ body {
 
 .header img {
   border-radius: 50%;
-  margin-left: 28%;
+  margin-left: 30%;
 }
 
 .content {
@@ -44,6 +45,12 @@ body {
   height: 100%;
   background-color: #222233;
   font-size: 24px;
+}
+
+form {
+  overflow: scroll;
+  overflow-x: auto;
+  height: 800px;
 }
 
 .input-form {
@@ -73,10 +80,6 @@ body {
   cursor: pointer;
   padding: 10px;
   border-radius: 20px;
-  position: absolute;
-  width: 30%;
-  top: 250px;
-  left: 525px;
   margin: 200px 0px;
   background-color: #adcfff;
   color: #222233;
@@ -98,8 +101,8 @@ body {
 .submit-button {
   cursor: pointer;
   padding: 3%;
-  margin: 4% 0% 4% 10%;
-  width: 180%;
+  margin: 4% 0% 4% 34%;
+  width: 140%;
   height: 20%;
   border-radius: 20px;
   background-color: #222233;
@@ -111,8 +114,8 @@ body {
 .submit-button:hover {
   cursor: pointer;
   padding: 3%;
-  margin: 4% 0% 4% 10%;
-  width: 180%;
+  margin: 4% 0% 4% 34%;
+  width: 140%;
   height: 20%;
   border-radius: 20px;
   transition: 0.4s ease;
@@ -131,32 +134,93 @@ input[type="text"],
   border-radius: 5px;
   margin: 4%;
   text-align: left;
+  height: 100%;
+  width: 70%;
+}
+
+.input-form > img {
+  visibility: hidden;
 }
 
 /* ---------------- MEDIA QUERIES ------------------- */
 /* Media queries for responsive design */
 
-/* Extra Large devices (1200+ px — Extra large screens, TV) */
-@media (min-width: 1201px) {
-  /*  */
-}
-
 /* Large devices (1025px — 1200px: Desktops, large screens) */
-@media (max-width: 1200px) {
-  /*  */
-}
+@media (max-width: 1260px) {
+  .content > img {
+    margin-top: 30px;
+    width: 400px;
+  }
 
-/* Big devices (769px — 1024px: Small screens, laptops) */
-@media (max-width: 1024px) {
-  /*  */
-}
+  .submit-button {
+    width: 100%;
+  }
 
-/* Medium devices (481px — 768px: iPads, Tablets) */
-@media (max-width: 768px) {
-  /*  */
+  .submit-button:hover {
+    width: 100%;
+  }
+
+  .input-form {
+    margin-left: 8%;
+  }
+
+  .header {
+    height: 120px;
+    margin-left: 10px;
+    font-size: 16px;
+  }
+
+  .header img {
+    border-radius: 50%;
+    margin-left: 13%;
+  }
 }
 
 /* Small devices (320px — 480px: Mobile devices) */
-@media (max-width: 480px) {
-  /*  */
+@media (max-width: 768px) {
+  .header img {
+    margin-left: 5%;
+    display: none;
+  }
+
+  .header {
+    height: 150px;
+    display: block;
+  }
+
+  .header h1 {
+    margin-top: 5%;
+    margin-left: 0.2%;
+  }
+
+  .content > img {
+    width: 400px;
+    height: 400px;
+    margin-top: 30px;
+  }
+  .enter-site {
+    font-size: 16px;
+  }
+
+  .input-form {
+    margin-left: 0%;
+    top: -20px;
+  }
+  .submit-button {
+    width: 80%;
+    margin-left: 6%;
+  }
+  .submit-button:hover {
+    width: 80%;
+    margin-left: 6%;
+  }
+
+  .input-form > label {
+    display: block;
+  }
+
+  th,
+  td {
+    display: block;
+  }
 }
