Added test images to test_data (0-36.jpg). Updated Frontend to show file number under model name. Updated the Blank Output to look nicer. Updated frontend to load at 80% zoom by default, using CSS zoom. Input images can now be given as n.jpg only instead of the entire file path, where n = 0-36 for test satellite images.

--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -4,6 +4,19 @@
   font-family: "Gotu", sans-serif;
 }
 
+.header,
+.global-zoom {
+  zoom: 75%;
+}
+
+.local-zoom {
+  zoom: 107%;
+}
+
+.local-button-zoom {
+  zoom: 110%;
+}
+
 body {
   margin: 0;
   padding: 0;
