--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="static/assets/css/styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+		<script src="https://kit.fontawesome.com/e753b8bd08.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container">
@@ -18,9 +19,13 @@
                 <h1>Road Detection from Satellite Images</h1>
             </div>
             <div class="content">
-                    <img src="static/assets/media/banner.gif" alt="Logo" width="30%"/><br>       
-                    <a class="enter-site" href="/detector"><i class="bi bi-thermometer-sun bi--flip-vertical"></i>&nbsp; Initialise Road Detection System &nbsp;<i class="bi bi-thermometer-snow"></i></a>
-             </div>
+				<div class="global-zoom">
+                    <img src="static/assets/media/banner.gif" alt="Logo" width="30%"/><br>  
+                    <div class="local-button-zoom">
+                        <a class="enter-site" href="/detector"><i class="fas fa-globe"></i>&nbsp; Initialise Road Detection System &nbsp;<i class="fa-solid fa-road"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
